--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stitches/react": "^1.0.0-canary.18",
+    "framer-motion": "^4.1.17",
     "next": "11.1.0",
+    "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
